tests/error/class_multiple_public.gw
// [contains] more than
public class c{}
public class d{}
